--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "workspaces": {
     "packages": [
       "packages/hardhat",
-      "packages/nextjs"
+      "packages/nextjs",
+      "packages/buildbear"
     ]
   },
   "scripts": {
+    "fork-bb": "yarn workspace @se-2/buildbear fork",
+    "faucet-bb": "yarn workspace @se-2/buildbear faucet",
     "account": "yarn workspace @se-2/hardhat account",
     "chain": "yarn workspace @se-2/hardhat chain",
     "fork": "yarn workspace @se-2/hardhat fork",
@@ -31,10 +34,19 @@
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
+    "@types/ethereum-protocol": "^1",
+    "@types/http-cache-semantics": "^4",
+    "@types/underscore": "^1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3"
   },
   "resolutions": {
     "usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
+  },
+  "dependencies": {
+    "ethereum-protocol": "^1.0.1",
+    "http-cache-semantics": "^4.1.1",
+    "underscore": "^1.13.6",
+    "web3-provider-engine": "^16.0.7"
   }
 }
