--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -32,6 +32,7 @@
     "usehooks-ts": "^2.7.2",
     "viem": "1.19.9",
     "wagmi": "1.4.7",
+    "web3-provider-engine": "^16.0.7",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
