added uniswap & aave

--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -46,7 +46,9 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.18.0",
     "@openzeppelin/contracts": "^4.8.1",
+    "@uniswap/v3-periphery": "^1.4.4",
     "dotenv": "^16.0.3",
     "envfile": "^6.18.0",
     "qrcode": "^1.5.1"
