--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
   "dependencies": {
     "ethereum-protocol": "^1.0.1",
     "http-cache-semantics": "^4.1.1",
-    "underscore": "^1.13.6",
-    "web3-provider-engine": "^16.0.7"
+    "underscore": "^1.13.6"
   }
 }
