--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@openzeppelin/contracts": "^4.8.1",
     "@rainbow-me/rainbowkit": "1.3.0",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "axios": "^1.3.4",
     "blo": "^1.0.1",
     "daisyui": "^3.5.1",
     "next": "^13.1.6",
@@ -45,6 +47,7 @@
     "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "ethers": "^5.7.1",
     "postcss": "^8.4.16",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.3.3",
